--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -39,3 +39,11 @@
     {% endif %}
   </div>
 {% endif %}
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
